--- a/index.html
+++ b/index.html
@@ -1,87 +1,149 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meo Hub</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Meo Hub</title>
 
-  <script>
-    // ===== THAY LINK Ở ĐÂY =====
-    const DELTA_LINK = "https://link-delta.com";
-    const CODEX_LINK = "https://link-codex.com";
-    const ARCEUS_LINK = "https://link-arceus.com";
-    const KAITUN_LINK = "https://link-script.com";
-  </script>
+<script>
+// ======= CHỈ SỬA Ở ĐÂY =======
 
-  <style>
-    body {
-      background: #0f0f0f;
-      color: white;
-      font-family: Arial;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
+// CLIENT
+const DELTA_TEXT = "Delta Vng V2";
+const DELTA_LINK = "https://link-delta.com";
 
-    h1 {
-      margin-top: 20px;
-    }
+const CODEX_TEXT = "Codex Vng V1";
+const CODEX_LINK = "https://link-codex.com";
 
-    .menu {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
+// SCRIPT 1
+const SCRIPT1_TITLE = "Check Online";
+const SCRIPT1_CODE = `loadstring(game:HttpGet("https://raw.githubusercontent.com/bduy2222/FynixRejoin/refs/heads/main/checkonline.lua"))()`;
 
-    .menu button {
-      padding: 15px 30px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      background: cyan;
-      font-weight: bold;
-      cursor: pointer;
-    }
+// SCRIPT 2
+const SCRIPT2_TITLE = "Example Script";
+const SCRIPT2_CODE = `print("Hello Meo Hub")`;
 
-    .menu button:hover {
-      background: #00aaaa;
-    }
+// =============================
+</script>
 
-    .section {
-      display: none;
-      margin-top: 40px;
-    }
+<style>
+body{
+  margin:0;
+  font-family:Arial;
+  background:#0f0f0f;
+  color:white;
+  text-align:center;
+}
 
-    .box {
-      background: #1c1c1c;
-      margin: 15px auto;
-      padding: 15px;
-      max-width: 400px;
-      border-radius: 12px;
-    }
+h1{
+  margin-top:25px;
+  font-size:32px;
+  text-shadow:0 0 10px cyan;
+}
 
-    .box button {
-      margin-top: 10px;
-      padding: 8px 20px;
-      border: none;
-      border-radius: 8px;
-      background: lime;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  </style>
+.menu{
+  margin-top:30px;
+  display:flex;
+  justify-content:center;
+  gap:20px;
+}
 
-  <script>
-    function showClient() {
-      document.getElementById("client").style.display = "block";
-      document.getElementById("script").style.display = "none";
-    }
+.menu button{
+  padding:15px 30px;
+  font-size:18px;
+  border:none;
+  border-radius:12px;
+  background:cyan;
+  font-weight:bold;
+  cursor:pointer;
+  transition:0.3s;
+}
 
-    function showScript() {
-      document.getElementById("client").style.display = "none";
-      document.getElementById("script").style.display = "block";
-    }
-  </script>
+.menu button:hover{
+  background:#00aaaa;
+  transform:scale(1.05);
+}
+
+.section{
+  display:none;
+  margin-top:40px;
+}
+
+.box{
+  background:#1c1c1c;
+  margin:20px auto;
+  padding:20px;
+  max-width:500px;
+  border-radius:15px;
+  box-shadow:0 0 15px rgba(0,255,255,0.3);
+  position:relative;
+}
+
+.box button{
+  margin-top:10px;
+  padding:8px 20px;
+  border:none;
+  border-radius:8px;
+  background:lime;
+  font-weight:bold;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+.box button:hover{
+  background:#55aa00;
+}
+
+.copy-btn{
+  position:absolute;
+  top:15px;
+  right:15px;
+  background:orange;
+}
+
+pre{
+  background:black;
+  color:#00ff00;
+  padding:15px;
+  margin-top:40px;
+  border-radius:10px;
+  max-height:200px;
+  overflow:auto;
+  white-space:pre;
+}
+</style>
+
+<script>
+function showClient(){
+  document.getElementById("client").style.display="block";
+  document.getElementById("script").style.display="none";
+}
+
+function showScript(){
+  document.getElementById("client").style.display="none";
+  document.getElementById("script").style.display="block";
+}
+
+function copyText(id,btn){
+  const text=document.getElementById(id).innerText;
+  navigator.clipboard.writeText(text);
+  btn.innerText="Copied ✓";
+  btn.style.background="lime";
+  setTimeout(()=>{
+    btn.innerText="Copy";
+    btn.style.background="orange";
+  },1500);
+}
+
+window.onload=function(){
+  document.getElementById("s1title").innerText=SCRIPT1_TITLE;
+  document.getElementById("s1code").innerText=SCRIPT1_CODE;
+  document.getElementById("s2title").innerText=SCRIPT2_TITLE;
+  document.getElementById("s2code").innerText=SCRIPT2_CODE;
+
+  document.getElementById("deltaText").innerText=DELTA_TEXT;
+  document.getElementById("codexText").innerText=CODEX_TEXT;
+}
+</script>
 
 </head>
 <body>
@@ -93,30 +155,36 @@
   <button onclick="showScript()">Script</button>
 </div>
 
-<!-- CLIENT SECTION -->
+<!-- CLIENT -->
 <div id="client" class="section">
+
   <div class="box">
-    <h3>Delta Vng</h3>
+    <h3 id="deltaText"></h3>
     <button onclick="window.location.href=DELTA_LINK">Download</button>
   </div>
 
   <div class="box">
-    <h3>Codex Vng</h3>
+    <h3 id="codexText"></h3>
     <button onclick="window.location.href=CODEX_LINK">Download</button>
   </div>
 
-  <div class="box">
-    <h3>Arceus</h3>
-    <button onclick="window.location.href=ARCEUS_LINK">Download</button>
-  </div>
 </div>
 
-<!-- SCRIPT SECTION -->
+<!-- SCRIPT -->
 <div id="script" class="section">
+
   <div class="box">
-    <h3>Kaitun 3TN</h3>
-    <button onclick="window.location.href=KAITUN_LINK">Get Script</button>
+    <h3 id="s1title"></h3>
+    <button class="copy-btn" onclick="copyText('s1code',this)">Copy</button>
+    <pre id="s1code"></pre>
   </div>
+
+  <div class="box">
+    <h3 id="s2title"></h3>
+    <button class="copy-btn" onclick="copyText('s2code',this)">Copy</button>
+    <pre id="s2code"></pre>
+  </div>
+
 </div>
 
 </body>
