--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <title>Roblox Client And Script</title>
 
 <script>
-const DISCORD_LINK = "https://discord.gg/yourserver";
+const DISCORD_LINK = "https://discord.gg/XgkM9kvyHd";
 
 const CLIENTS = [
-  { name: "Delta Vng V2", link: "https://link-delta-vng.com" },
-  { name: "Delta QT", link: "https://link-delta-qt.com" },
-  { name: "Codex Vng V1", link: "https://link-codex-vng.com" },
-  { name: "Codex QT", link: "https://link-codex-qt.com" }
+  { name: "Delta Vng V2.706", link: "https://link4m.com/wzTfmT" },
+  { name: "Delta QT V2.706", link: "https://link4m.com/kVSITvJg" },
+  { name: "Codex Vng V2.706", link: "https://link4m.com/K7rK91yg" },
+  { name: "Codex QT V2.706", link: "https://link4m.com/4HgzB" }
 ];
 
 const SCRIPTS = [
